--- a/flex/04-flex-information/index.html
+++ b/flex/04-flex-information/index.html
@@ -12,17 +12,25 @@
       <div class="title">Information!</div>
     </div>
     <div class="plants">
-      <img src="./images/barberry.png" alt="barberry">
-      <div class="text">This is a type of plant. We love this one.</div>
+      <div class="barberry-facts">
+        <img src="./images/barberry.png" alt="barberry">
+        <div class="text">This is a type of plant. We love this one.</div>
+      </div>
 
-      <img src="./images/chilli.png" alt="chili">
-      <div class="text">This is another type of plant. Isn't it nice</div>
-
-      <img src="./images/pepper.png" alt="pepper">
-      <div class="text">We have so many plants. Yay plants.</div>
-
-      <img src="./images/saffron.png" alt="saffron">
-      <div class="text">I'm running out of things to say about plants.</div>
+      <div class="chili-facts">
+        <img src="./images/chilli.png" alt="chili">
+        <div class="text">This is another type of plant. Isn't it nice</div>
+      </div>
+      <div class="pepper-facts">
+        <img src="./images/pepper.png" alt="pepper">
+        <div class="text">We have so many plants. Yay plants.</div>
+      </div>
+      
+      <div class="saffron-facts">
+        <img src="./images/saffron.png" alt="saffron">
+        <div class="text">I'm running out of things to say about plants.</div>
+      </div>
+      <!-- Added a div for each plant and the little message thats with them. The goal is to separate them in to smaller packaging so that the can be further isolated in CSS file-->
     </div>
 
     <!-- disregard this section, it's here to give attribution to the creator of these icons -->
