--- a/flex/05-flex-modal/index.html
+++ b/flex/05-flex-modal/index.html
@@ -10,11 +10,13 @@
   <body>
     <div class="modal">
       <div class="icon">!</div>
-      <div class="header">Are you sure you want to do that?</div>
-      <div class="close-button">✖</div>
-      <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
-      <button class="continue">Continue</button>
-      <button class="cancel">Cancel</button>
+      <div> <!-- This is what I should have done (added a div here. I kind of did this originally but went for mutliple containers) -->
+        <div class="header">Are you sure you want to do that?</div>
+        <div class="close-button">✖</div>
+        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
+        <button class="continue">Continue</button>
+        <button class="cancel">Cancel</button>
+      </div>
     </div>
   </body>
 </html>
